# Self-evaluating-estimator

./: .gitignore  LICENSE  README.md  model_arc.pt  pyproject.toml  run.sh  setup.sh
data/arc-prize-2025/: sample_submission.json
docs/: about.md  architecture.tex
docs/design/: architecture.tex
docs/envs/: README.md
docs/v2/: architecture.tex
docs/v3/: architecture.tex
docs/v4/: architecture.tex
src/: __init__.py  agent.py  agent_reward_classes.py  agent_v4.py  env.py  gedächtnis.py  idea.py  interface.py  memory.py  stateOfMind.py  umwelt.py
src/agents/: agent.py  agent_v4.py  main.py  see.py  v1.json
src/dev/: dev_watchdog.py
src/envs/: arc.py  arc_environment.py  battleship.py  random.py  test.py
src/gui/: main.py
src/gui/widgets/: memory_visualizer.py
src/types/: agent.py  env.py
tensorboard_logs/PPO_11/: events.out.tfevents.1759954321.asrock.1907835.0
tensorboard_logs/PPO_2/: events.out.tfevents.1758848698.asrock.774133.0
test/logs/tensorboard_logs/PPO_1/: events.out.tfevents.1758848628.asrock.730003.0
test/logs/tensorboard_logs/PPO_3/: events.out.tfevents.1758849172.asrock.948787.0
test/logs/tensorboard_logs/PPO_4/: events.out.tfevents.1758920846.asrock.1798202.0
test/logs/tensorboard_logs/PPO_5/: events.out.tfevents.1758921253.asrock.2134065.0
test/logs/tensorboard_logs/PPO_6/: events.out.tfevents.1758921374.asrock.2243891.0
test/logs/tensorboard_logs/PPO_8/: events.out.tfevents.1758922280.asrock.3023020.0
test/tensorboard_logs/PPO_10/: events.out.tfevents.1758922945.asrock.3591477.0
test/tensorboard_logs/PPO_7/: events.out.tfevents.1758921671.asrock.2458122.0
test/tensorboard_logs/PPO_9/: events.out.tfevents.1758922916.asrock.3576846.0
